@startuml
title ROS Backend DB Schema
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity alembic_version {
  *version_num <<PK>> : int
}

entity rh_accounts {
  *id <<PK>> : int
  --
  account : text
  org_id : text
}

entity performance_profile {
  *system_id <<PK>> : int
  --
  performance_record : jsonb
  performance_utilization : jsonb
  report_date : timestamp
  number_of_recommendations : int
  state : varchar
  operating_system : jsonb
  rule_hit_details : jsonb
  psi_enabled : bool,
  top_candidate : varchar
  top_candidate_price : double
}

entity performance_profile_history {
  *system_id <<PK>> : int
  *report_date <<PK>> : timestamp
  --
  performance_record : jsonb
  performance_utilization : jsonb
  report_date : timestamp
  number_of_recommendations : int
  state : varchar
  operating_system : jsonb
  rule_hit_details : jsonb
  psi_enabled : bool,
}

entity systems{
  *id <<PK>> : int
  --
  tenant_id <<FK>> : int
  inventory_id : uuid
  cloud_provider : varchar
  display_name : varchar
  fqdn : varchar
  instance_type : varchar
  state : varchar
  stale_timestamp : timestamp
  region : varchar
  operating_system : jsonb
  cpu_states : varchar
  io_states : varchar
  memory_states : varchar
  groups : jsonb
}

entity rules {
  *id <<PK>> : int
  --
  rule_id : varchar
  description : text
  reason : text
  resolution : text
  condition : text
}

entity recommendation_rating{
  *id <<PK>> : int
  --
  system_id <<FK>> : int
  rated_by : text
  rating : int
  created_at : timestamp
  updated_at : timestamp
}



systems }o..|| rh_accounts
systems ||..|| performance_profile
systems ||..|| performance_profile_history
systems ||..o{ recommendation_rating
@enduml